- Fixed Namespacing for ‘.menu’ to prevent ionic conflict
- Toggles now work, removed some css from the main stylesheet that was
from an old demo that was conflicting with Ionc and causing issues

- Updated some core app settings to prevent “App Bounce” when you come
to the top or bottom of scrolling. This can get annoying in things like
the flyout menu. NOTE: Scrolling in Safari Desktop seems to have been
disabled now, but works great in XCODE and Sim

- Looking into Simplepie Sorting (They say its sort of a bug, but there
is a hack.) checking it out

- Looking into Load More with RSS. Have to see if simple pie has the
ability to “get the next set of articles”. Issue here may be that the
next set may not be “in order” (due to the previous bug and other
things)… Maybe for now we can just have it pull more at the get go…
more soon

--- a/news-app/platforms/ios/www/scss/style.scss
+++ b/news-app/platforms/ios/www/scss/style.scss
@@ -207,7 +207,7 @@ body {
 	margin-top:15px;
 }
 
-.menu {
+.flyoutmenu {
 	width:70%;
 	min-height:100%;
 	/*display:none;*/
@@ -782,74 +782,3 @@ body {
 
 	}	
 }
-
-/* TEST TOGGLE 2 */
-
-
-
-$white: #fff;
-$green: #53d76a;
-$grey: #d3d3d3;
-
-input[type="checkbox"] {
-  appearance: none;
-  background-color: darken($white, 2%);
-  border: 1px solid $grey;
-  border-radius: 26px;
-  box-shadow: inset 0 0 0 1px $grey;
-  cursor: pointer;
-  height: 28px;
-  position: relative;
-  transition: border .25s .15s,
-              box-shadow .25s .3s,
-              padding .25s;
-  width: 44px;
-  vertical-align: top;
-  float: right;
-  margin-top:0;
-  
-/* THE ACTUAL CIRCLE OF THE SWITCH */
-
-  &:after {
-    background-color: $white;
-    border: 1px solid $grey;
-    border-radius: 13px;
-    box-shadow: inset 0 -3px 3px hsla(0,0%,0%,.025),
-                0 1px 4px hsla(0,0%,0%,.15),
-                0 4px 4px hsla(0,0%,0%,.1);
-    content: '';
-    display: block;
-    height: 26px;
-    left: 0;
-    position: absolute;
-    right: 16px;
-    top: 0;
-    transition: border .25s .15s,
-                left .25s .1s,
-                right .15s .175s;
-  }
-  /* Green Active Area */
-  &:checked {
-    border-color: $green !important;
-    background:$green !important;
-    box-shadow: inset 0 0 0 15px $green ;
-    -webkit-box-shadow: inset 0 0 0 15px #53d76a !important;
-    padding-left: 18px;
-    display:block;
-    transition: border .25s,
-                box-shadow .25s,
-                padding .25s .15s;
-  
-    &:after {
-      border-color: $green;
-      left: 16px;
-      right: 0;
-      transition: border .25s,
-                  left .15s .25s,
-                  right .25s .175s;
-    }
-
-  }
-}
-
-
